--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
     position: absolute;
     background-size: contain;
     background-repeat: no-repeat;
+    z-index: 1;
 }
 .paper { background-image: url('assets/paper.png'); }
 .rock { background-image: url('assets/rock.png'); }
@@ -32,6 +33,7 @@ body {
     background-color: rgba(194, 6, 6, 0.496); 
     border-radius: 50%;
     animation: explode 0.5s ease-out forwards; 
+    z-index: 20;
 }
 
 @keyframes explode {
@@ -39,8 +41,12 @@ body {
         transform: scale(0);
         opacity: 1;
     }
-    100% {
+    50% {
         transform: scale(2);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(3);
         opacity: 0;
     }
 }
